syntax = "proto3";

import "Server/proto/common/common.proto";

package punch;

service Punch {
    rpc Punch(PunchRequest) returns (common.CommReply) {}
    rpc GetPunch(common.CommRequest) returns (PunchReply) {}
    rpc GetStat(PunchRequest) returns (PunchStatReply) {}
    rpc SubmitCode(CodeRequest) returns (LoginReply) {}
    rpc Login(LoginRequest) returns (LoginReply) {}
}

message PunchRequest {
    common.Head head = 1;
    string apmac = 2;
}

message PunchInfo {
    int64 aid = 1;
    double longitude = 2;
    double latitude = 3;
    string address = 4;
    string time = 5;
}

message PunchReply {
    common.Head head = 1;
    repeated PunchInfo infos = 2;
}

message PunchStatReply {
    common.Head head = 1;
    int64 total = 2;
}

message CodeRequest {
    common.Head head = 1;
    string code = 2;
}

message LoginReply {
    common.Head head = 1;
    int64 uid = 2;
    string token = 3;
    int64 flag = 4;
    string sid = 5;
}

message LoginRequest {
    common.Head head = 1;
    string rawdata = 2;
    string signature = 3;
    string encrypteddata = 4;
    string iv = 5;
    string sid = 6;
}
